@@ -107,6 +107,7 @@ typedef struct {
    bool_t middle_click_drags_page;
    int penalty_hyphen, penalty_hyphen_2;
    int penalty_em_dash_left, penalty_em_dash_right, penalty_em_dash_right_2;
+   int stretchability_factor;
 } DilloPrefs;
 
 /* Global Data */
